--- a/insektenhotel/index.html
+++ b/insektenhotel/index.html
@@ -30,7 +30,7 @@
 <body>
 
 <!-- Header Area module load via js -->
-<header class=sticky-top id="header"></header>
+<header style="background-color: #19191f" id="header"></header>
 
 <!-- Content of the page -->
 <main>
@@ -204,7 +204,7 @@
         </div>
     </div>
     <!-- Example Rotation -->
-    <div class="container" style="padding-top: 30px">
+    <div class="container pb-3" style="padding-top: 30px">
         <div class="row row-cols-2">
             <div class="col-12 col-xl-4">
                 <h3>Beispiele</h3>
