--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Parcivads SchoolTracker to check for classworks and other media"/>
     <meta property="og:image" content="http://localhost/img/header/parcivad.png"/>
     <!-- Standard Meta -->
-    <meta name="theme-color" content="#9e071d">
+    <meta name="theme-color" content="#19191F">
     <title>Parcivad | ERR</title>
     <!--Favicon-->
     <link href="/img/favicon_io/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
@@ -17,18 +17,18 @@
     <link href="/img/favicon_io/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
     <link href="/img/favicon_io/site.webmanifest" rel="manifest">
     <!--Bootstrap CSS-->
-    <link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="/vendor/bootstrap/bootstrap.css" rel="stylesheet" type="text/css">
     <!--Java Script-->
-    <script src="/js/bootstrap.js"></script>
+    <script src="/vendor/bootstrap/bootstrap.js"></script>
 </head>
-<body>
+<body style="background-color: #19191F">
 
 <!-- Header Area module load via js -->
-<header style="background-color: #9e071d" id="header"></header>
+<header style="background-color: #19191F" id="header"></header>
 
 <!-- Content of the page -->
 <main>
-    <div class="container-fluid" style="background-color: #9e071d">
+    <div class="container-fluid" style="background-color: #19191F">
         <!--Introduction-->
         <div class="container px-4 pb-3 md-3 align-items-center text-center text-light" style="padding-top: 2rem;">
             <h1>
@@ -52,7 +52,7 @@
 <!-- Footer Area module load via js -->
 <footer id="footer"></footer>
 
-<script src="/js/jquery-3.6.0.min.js"></script>
+<script src="/vendor/jquery-3.6.0.min.js"></script>
 <script src="/js/loader.js"></script>
 
 </body>
