--- a/insektenhotel/index.html
+++ b/insektenhotel/index.html
@@ -22,10 +22,10 @@
           content="Die Löwenrot-Projekttage der 10a">
 
     <!--Bootstrap CSS-->
-    <link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="/vendor/bootstrap/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="/css/sites/insektenhotel.css" rel="stylesheet" type="text/css">
     <!--Java Script-->
-    <script src="/js/bootstrap.js"></script>
+    <script src="/vendor/bootstrap/bootstrap.js"></script>
 </head>
 <body>
 
@@ -272,7 +272,7 @@
 <!-- Footer Area module load via js -->
 <footer id="footer"></footer>
 
-<script src="/js/jquery-3.6.0.min.js"></script>
+<script src="/vendor/jquery-3.6.0.min.js"></script>
 <script src="/js/loader.js"></script>
 </body>
 </html>
