--- a/modules/footer.html
+++ b/modules/footer.html
@@ -4,6 +4,10 @@
         --footerColor: rgba(234, 170, 99, 100);
     }
 
+    main {
+        min-height:95vh !important;
+    }
+
     footer {
         background-color: var(--footerBgColor);
     }
@@ -92,12 +96,13 @@
                 </div>
             </div>
             <div class="col-12 col-md-6 col-xl-2 pt-5 pt-md-3 pt-xl-0 footerLinkList">
-                <h5>School</h5>
+                <h5>General</h5>
 
                 <div class="footerLinkListLine"></div>
 
                 <div class="pt-2 row">
-                    <a href="/schoolTracker">School Tracker</a>
+                    <a href="/minecraft">Dashboard</a>
+                    <a href="/student/register">Student Calendar</a>
                     <a href="/insektenhotel">Projekttage</a>
                 </div>
             </div>
