--- a/modules/header.html
+++ b/modules/header.html
@@ -14,10 +14,10 @@
         <div class="col-8 gx-2 collapse navbar-collapse justify-content-end" id="navbar">
             <ul class="navbar-nav nav-style align-self-center" style="font-family: 'Arial Black'; font-size: 1rem; font-weight: revert">
                 <li class="nav-item">
-                    <a class="nav-link" href="/schoolTracker/">School</a>
+                    <a class="nav-link" href="/student/register">Student Calendar</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/game/">Games</a>
+                    <a class="nav-link" href="/minecraft">MC Dashboard</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/module/">Modules</a>
