--- a/schoolTracker/index.html
+++ b/schoolTracker/index.html
@@ -22,10 +22,10 @@
           content="Für zusammengefasste Informationen, wähle bitte deine Schule und Klasse aus.">
 
     <!--Bootstrap CSS-->
-    <link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="/vendor/bootstrap/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="/css/sites/schoolTracker.css" rel="stylesheet" type="text/css">
     <!--Java Script-->
-    <script src="/js/bootstrap.js"></script>
+    <script src="/vendor/bootstrap/bootstrap.js"></script>
 </head>
 <body>
 
@@ -245,7 +245,7 @@
 
 </script>
 
-<script src="/js/jquery-3.6.0.min.js"></script>
+<script src="/vendor/jquery-3.6.0.min.js"></script>
 <script src="/js/loader.js"></script>
 <script src="/js/schoolTracker.js"></script>
 </body>
