--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
           content="Start Seite von parcivads Website ;D">
 
     <!--Bootstrap CSS-->
-    <link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="/vendor/bootstrap/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="/css/sites/general.css" rel="stylesheet" type="text/css">
     <!--Java Script-->
-    <script src="/js/bootstrap.js"></script>
+    <script src="/vendor/bootstrap/bootstrap.js"></script>
 </head>
 <body>
 
@@ -39,11 +39,11 @@
                 <div class="col-12 col-xl-6 container-text text-light">
                     <h2>IMMER DEN DIREKTEN ÜBERLICK HABEN</h2>
                     <p>Über das Server Dashboard hast du immer Zugriff auf deine MC Daten. Zudem kannst du Online- und Afkzeiten einsehen.</p>
-                    <button class="button">DASHBOARD</button>
+                    <button onclick="location.assign('/minecraft/')" class="button">DASHBOARD</button>
                 </div>
                 <div class="col-12 col-xl-6 align-content-end">
 
-                    <img width="100%" src="/img/parcTest.svg">
+                    <img width="100%" src="/img/home/parcTest.svg">
                 </div>
             </div>
         </div>
@@ -52,13 +52,13 @@
     <div class="container pt-5 pb-5">
         <div class="row row-cols-2 w-100 pt-5">
             <div class="col-12 col-xl-7">
-                <img width="100%" src="/img/parcTest2.svg">
+                <img width="100%" src="/img/home/parcTest2.svg">
             </div>
             <div class="col-12 col-xl-5 container-text text-end align-self-center">
                 <h2>BLEIB AUF DEM NEUSTEN STAND</h2>
-                <p>Schul Websiten auf das Wichtigste heruntergebrochen. Mit dem
-                    <a href="/schoolTracker" class="custom-link">School Tracker</a>
-                    kannst du ganz einfach die letzten Artikel, Neuigkeiten und Terminpläne deiner Schule einsehen. Aber zur Zeit befindet sich dieses Tool noch in der Demoversion.</p>
+                <p>Stundenplan, Vertrungsplan und Klausurplan in einem Kalender. Mit dem
+                    <a href="/student/register" class="custom-link">Student Calendar</a>
+                    kannst du ganz einfach deine Kurse markieren und sie in deinen Kalender einfügen.</p>
             </div>
         </div>
     </div>
@@ -74,7 +74,7 @@
                         <div class="col-12 col-xl">
                             <div class="p-3 container-module">
                                 <div class="pb-1">
-                                    <img height="80px" src="/img/homeConnect.png">
+                                    <img height="80px" src="/img/home/homeConnect.png">
                                 </div>
                                 <h5>Bosch HomeConnect</h5>
                             </div>
@@ -82,7 +82,7 @@
                         <div class="col-12 col-xl">
                             <div class="p-3 container-module">
                                 <div class="pb-1">
-                                    <img height="80px" src="/img/reolink.png">
+                                    <img height="80px" src="/img/home/reolink.png">
                                 </div>
                                 <h5>REOLINK®</h5>
                             </div>
@@ -90,7 +90,7 @@
                         <div class="col-12 col-xl">
                             <div class="p-3 container-module">
                                 <div class="pb-1">
-                                    <img height="80px" src="/img/magicHome.png">
+                                    <img height="80px" src="/img/home/magicHome.png">
                                 </div>
                                 <h5>MagicHome</h5>
                             </div>
@@ -107,7 +107,7 @@
 <footer id="footer"></footer>
 
 
-<script src="/js/jquery-3.6.0.min.js"></script>
+<script src="/vendor/jquery-3.6.0.min.js"></script>
 <script src="/js/loader.js"></script>
 </body>
 </html>
