--- a/student/register/index.html
+++ b/student/register/index.html
@@ -61,7 +61,7 @@
                 <div class="p-2 h-100" style="background-color: #f5f5f5; border-radius: 10px;">
                     <h4 class="text-center">Hinweise</h4>
                     <p style="font-size: 1rem; hyphens: auto; text-align: justify" class="text-secondary">
-                        Wenn du Hinweise bei deiner Registrierung aktiviert hast, sind diese automatisch in deinem Kalender eingetragen. Damit auch eine Erinnerung/Nachricht siehst, musst du die Funktion in deinem Kalender erlauben.
+                        Wenn du Hinweise bei deiner Registrierung aktiviert hast, sind diese automatisch in deinem Kalender eingetragen. Damit du eine Erinnerung/Nachricht siehst musst du die Funktion in deinem Kalender erlauben.
                     </p>
                     <div class="text-center pt-2">
                         <img width="80%" style="overflow-x: hidden;" src="/img/student/notificationsExplained.svg">
@@ -74,7 +74,7 @@
                     <p style="font-size: 1rem; hyphens: auto; text-align: justify" class="text-secondary">
                         Dein registrierter Kalender aktualisiert sich nur sehr selten automatisch. Wenn du im
                         Fall von Vertretungen den Kalender aktualisieren willst, musst du die Option
-                        <span style="font-weight: bolder">Kalender aktualisieren</span> aktivieren oder du ziehst das Menü im
+                        <span style="font-weight: bolder">Kalender aktualisieren</span> einstellen oder du ziehst das Menü im
                         Apple Kalender nach unten.
                     </p>
                     <div class="text-center pt-1">
