--- a/student/register/index.html
+++ b/student/register/index.html
@@ -112,11 +112,11 @@
 
                             <!-- Booleans as Checkbox for user -->
                             <div class="input-group pt-2">
-                                <input class="form-check-input mt-1 rounded" type="checkbox" id="alarm" value="" aria-label="Checkbox for following text input">
+                                <input class="form-check-input mt-1 rounded" type="checkbox" checked id="alarm" value="" aria-label="Checkbox for following text input">
                                 <span class="px-1 text-secondary">⏰ Hinweise 5 minuten vor jedem Kursbeginn</span>
                             </div>
                             <div class="input-group pt-1">
-                                <input class="form-check-input mt-1 rounded" type="checkbox" id="emoji" value="" aria-label="Checkbox for following text input">
+                                <input class="form-check-input mt-1 rounded" type="checkbox" checked id="emoji" value="" aria-label="Checkbox for following text input">
                                 <span class="px-1 text-secondary">🎉 Emojis in Titeln und Beschreibungen</span>
                             </div>
                         </div>
