--- a/404.html
+++ b/404.html
@@ -41,9 +41,9 @@
             <p style="font-size: 2rem">
                 Diese Seite wird momentan noch aufgebaut, also hab bitte etwas Geduld :D
             </p>
-            <div style="display: flex; overflow-y: hidden;" class="justify-content-center">
-                <img style="border-radius: 50px 0 0 50px" width="80%" src="/img/404/han-solo.gif">
-                <img style="border-radius: 0 50px 50px 0" width="80%" src="/img/404/chewbacca.gif">
+            <div style="display: flex" class="justify-content-center">
+                <img style="border-radius: 50px 0 0 50px" width="100%" src="/img/404/han-solo.gif">
+                <img style="border-radius: 0 50px 50px 0" width="100%" src="/img/404/chewbacca.gif">
             </div>
         </div>
     </div>
