--- a/student/register/index.html
+++ b/student/register/index.html
@@ -43,7 +43,7 @@
             <div class="row row-cols-2 w-100 pt-5 pb-3">
                 <div class="col-12 col-xl-6 container-text text-light">
                     <h2>DEINE KURSE DIREKT IM KALENDER</h2>
-                    <p>Über diese Seite kannst du einfach und schnell deinen Stundenplan in den Apple, Google oder Outlook Kalender einfügen.</p>
+                    <p>Über diese Seite kannst du einfach und schnell deinen Stundenplan in den Apple oder Google Kalender einfügen.</p>
                     <p>Dieser Kalender kann dann mit dem Vertretungsplan & Klausurterminen automatisch verändert werden.
                         Wähle dafür deine Kurse aus und gib deinen Namen an.</p>
                 </div>
@@ -122,6 +122,7 @@
                                 <span class="px-1 text-secondary">🎉 Emojis in Titeln und Beschreibungen</span>
                             </div>
                         </div>
+                        <p style="padding-top: 5px; font-size: 0.7rem; color: #943834; text-align: center">Öffne die Kalender App bevor du auf hinzufügen drückst. Achte beim hinzufügen in den Kalender auf die Option "abonnieren" (runter scrollen).</p>
                     </div>
                     <div id="calenderButton" class="pt-2 button-calendar">
                         <button onclick="registerUser()">Zum Kalendar hinzufügen
