--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -94,7 +94,7 @@
                             </div>
                             <div class="w-100"></div>
                             <div style="display: flex;">
-                                <h5 class="domain">mc.parcivad.de</h5>
+                                <h5 class="domain">status</h5>
                                 <div class="blob red" id="performanceBulb"></div>
                             </div>
                         </div>
