--- a/modules/footer.html
+++ b/modules/footer.html
@@ -121,14 +121,7 @@
                 </div>
             </div>
             <div class="col-12 col-xl-3 pt-5 pt-xl-0 col-3">
-                <iframe style="border-radius:12px"
-                        src="https://open.spotify.com/embed/track/4tRhRLBxIZ34Iw0eCuiC03?theme=0"
-                        width="100%" height="80" frameBorder="0" allowfullscreen=""
-                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <iframe style="border-radius:12px"
-                        src="https://open.spotify.com/embed/track/1MOGJQsVeaRcXY6heJz5UZ"
-                        width="100%" height="80" frameBorder="0" allowfullscreen=""
-                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <!-- Removed Spotify iframe because of cringe -->
             </div>
         </div>
     </div>
