--- a/student/register/index.html
+++ b/student/register/index.html
@@ -74,7 +74,7 @@
                 <div class="p-2 h-100" style="background-color: #f5f5f5; border-radius: 10px;">
                     <h4 class="text-center">Aktualisierung</h4>
                     <p style="font-size: 1rem; hyphens: auto; text-align: justify" class="text-secondary">
-                        Dein registrierter Kalender aktualisiert sich nur sehr selten automatisch. Wenn du aber im
+                        Dein registrierter Kalender aktualisiert sich hin und wieder automatisch. Wenn du aber im
                         Fall von Vertretungen den Kalender aktualisieren willst kannst du das über die Einstellung
                         <span style="font-weight: bolder">Kalender aktualisieren</span> tun oder du ziehst das Menü im
                         Apple Kalender nach unten.
