--- a/student/register/index.html
+++ b/student/register/index.html
@@ -56,7 +56,7 @@
     </div>
 
     <div class="container pt-5 pb-5 container-text">
-        <div class="row  row-cols-3">
+        <div class="row row-cols-3 g-3">
             <div class="col-12 col-md-6 col-xl-4">
                 <div class="p-2 h-100" style="background-color: #f5f5f5; border-radius: 10px;">
                     <h4 class="text-center">Hinweise</h4>
@@ -84,7 +84,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-xl-4 pt-4 pt-xl-0">
+            <div class="col-12 col-xl-4 pt-4 pt-xl-0 order-last order-xl-0">
                 <div id="registerView">
                     <div class="p-2" style="background-color: #f5f5f5; border-radius: 10px 10px 0 0;">
                         <h4 class="text-center">Registrieren</h4>
@@ -127,6 +127,33 @@
                     <div id="calenderButton" class="pt-2 button-calendar">
                         <button onclick="registerUser()">Zum Kalendar hinzufügen
                         </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-xl-4 pt-3 pt-md-0">
+                <div class="p-2 h-100" style="background-color: #f5f5f5; border-radius: 10px;">
+                    <h4 class="text-center">Widgets</h4>
+                    <p style="font-size: 1rem; hyphens: auto; text-align: justify" class="text-secondary">
+                        Füge ein <span style="font-weight: bolder">Kalender-Widget</span> zu deinem Sperrbildschirm
+                        hinzu, damit du immer die nächste Stunde und Raum siehst.
+                    </p>
+                    <div class="text-center pt-1">
+                        <img width="80%" style="overflow-x: hidden;" src="/img/student/phoneWidget.svg">
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-xl-8 pt-3 pt-md-0">
+                <div class="p-2 h-100" style="background-color: #f5f5f5; border-radius: 10px;">
+                    <h4 class="text-center">Vertretungen</h4>
+                    <p style="font-size: 1rem; hyphens: auto; text-align: justify" class="text-secondary">
+                        Vertretungen werden wie folgt angezeigt, dabei kommt es darauf an ob du die Option
+                        <span style="font-weight: bolder">Emojis in Titeln und Beschreibungen</span> aktiviert hast.
+                    </p>
+                    <div>
+
+                    </div>
+                    <div class="text-center pt-1">
+                        <img class="pt-3 collapse-image" src="/img/student/replaceView.svg">
                     </div>
                 </div>
             </div>
