--- a/student/register/index.html
+++ b/student/register/index.html
@@ -153,7 +153,7 @@
 
                     </div>
                     <div class="text-center pt-1">
-                        <img class="pt-3 collapse-image" src="/img/student/replaceView.svg">
+                        <img width="60%" class="pt-3 collapse-image" src="/img/student/replaceView.svg">
                     </div>
                 </div>
             </div>
