Put Warning of use into page and update svg size for render

--- a/student/register/index.html
+++ b/student/register/index.html
@@ -55,6 +55,21 @@
         </div>
     </div>
 
+    <div class="container pt-4">
+        <div class="alert alert-warning" role="alert">
+            Das System befindet sich noch in der
+            <span style="font-weight: bold">1.2 BETA</span>
+            , das heißt das bisher nur die Stundenplan Funktion vollständig ist. Der
+            <span style="font-weight: bold">Vertretungsplan</span>
+            wird von mir noch
+            <span style="font-weight: bold">manuell eingestellt</span>
+            (viel Aufwand), deshalb ist dieser nicht immer vollständig!
+            <span style="font-weight: bold">Wenn die Schule uns den Vertretungsplan freigibt</span>,
+            wäre dieser zuverlässiger und aktueller.
+            (Neuigkeiten über den Systemzustand findet ihr immer genau hier)
+        </div>
+    </div>
+
     <div class="container pt-5 pb-5 container-text">
         <div class="row row-cols-3 g-3">
             <div class="col-12 col-md-6 col-xl-4">
@@ -74,7 +89,7 @@
                 <div class="p-2 h-100" style="background-color: #f5f5f5; border-radius: 10px;">
                     <h4 class="text-center">Aktualisierung</h4>
                     <p style="font-size: 1rem; hyphens: auto; text-align: justify" class="text-secondary">
-                        Dein registrierter Kalender aktualisiert sich hin und wieder automatisch. Wenn du aber im
+                        Dein registrierter Kalender aktualisiert sich nur sehr selten automatisch. Wenn du aber im
                         Fall von Vertretungen den Kalender aktualisieren willst kannst du das über die Einstellung
                         <span style="font-weight: bolder">Kalender aktualisieren</span> tun oder du ziehst das Menü im
                         Apple Kalender nach unten.
@@ -153,7 +168,7 @@
 
                     </div>
                     <div class="text-center pt-1">
-                        <img width="60%" class="pt-3 collapse-image" src="/img/student/replaceView.svg">
+                        <img class="pt-3 collapse-image" src="/img/student/replaceView.svg">
                     </div>
                 </div>
             </div>
