--- a/student/register/index.html
+++ b/student/register/index.html
@@ -65,7 +65,7 @@
             <span style="font-weight: bold">manuell eingestellt</span>
             (viel Aufwand), deshalb ist dieser nicht immer vollständig!
             <span style="font-weight: bold">Wenn die Schule uns den Vertretungsplan freigibt</span>,
-            wäre dieser zuverlässiger und aktueller.
+            dann wäre dieser zuverlässiger und aktueller.
             (Neuigkeiten über den Systemzustand findet ihr immer genau hier)
         </div>
     </div>
@@ -89,7 +89,7 @@
                 <div class="p-2 h-100" style="background-color: #f5f5f5; border-radius: 10px;">
                     <h4 class="text-center">Aktualisierung</h4>
                     <p style="font-size: 1rem; hyphens: auto; text-align: justify" class="text-secondary">
-                        Dein registrierter Kalender aktualisiert sich nur sehr selten automatisch. Wenn du aber im
+                        Dein registrierter Kalender aktualisiert sich hin und wieder automatisch. Wenn du aber im
                         Fall von Vertretungen den Kalender aktualisieren willst kannst du das über die Einstellung
                         <span style="font-weight: bolder">Kalender aktualisieren</span> tun oder du ziehst das Menü im
                         Apple Kalender nach unten.
@@ -150,7 +150,7 @@
                     <h4 class="text-center">Widgets</h4>
                     <p style="font-size: 1rem; hyphens: auto; text-align: justify" class="text-secondary">
                         Füge ein <span style="font-weight: bolder">Kalender-Widget</span> zu deinem Sperrbildschirm
-                        hinzu, damit du immer die nächste Stunde und Raum siehst.
+                        hinzu, damit du immer die nächste Stunde und den nächsten Raum siehst.
                     </p>
                     <div class="text-center pt-1">
                         <img width="80%" style="overflow-x: hidden;" src="/img/student/phoneWidget.svg">
