--- a/student/register/index.html
+++ b/student/register/index.html
@@ -55,18 +55,28 @@
         </div>
     </div>
 
-    <div class="container pt-4">
-        <div class="alert alert-warning" role="alert">
-            Das System befindet sich noch in der
-            <span style="font-weight: bold">1.2 BETA</span>
-            , das heißt das bisher nur die Stundenplan Funktion vollständig ist. Der
-            <span style="font-weight: bold">Vertretungsplan</span>
-            wird von mir noch
-            <span style="font-weight: bold">manuell eingestellt</span>
-            (viel Aufwand), deshalb ist dieser nicht immer vollständig!
-            <span style="font-weight: bold">Wenn die Schule uns den Vertretungsplan freigibt</span>,
-            dann wäre dieser zuverlässiger und aktueller.
-            (Neuigkeiten über den Systemzustand findet ihr immer genau hier)
+
+    <div class="container container-text pt-4">
+        <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                        Neuigkeiten & Update Verlauf
+                    </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                    <div class="alert alert-success" role="alert" style="border-radius: 0; border: 0; margin-bottom: 0">
+                        <div class="w-100"></div>
+                        <span style="font-weight: bold">1.2 STABLE</span> Kalender Service läuft | Login Service läuft
+                        <div class="dropdown-divider"></div>
+                        <span style="font-weight: bold">1.1 BETA</span> Klassenarbeiten werden als ganztägige Termine eingetragen.
+                        <div class="dropdown-divider"></div>
+                        <span style="font-weight: bold">1.0 BETA</span> Vertretungsplan ersetzt automatisch Kurstermine
+                        <div class="dropdown-divider"></div>
+                        <span style="font-weight: bold">0.9 BETA</span> Kalender wird automatisch mit den ausgewählten Kursen aufgefüllt.
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
