--- a/student/register/index.html
+++ b/student/register/index.html
@@ -19,7 +19,7 @@
     <!--Description Meta tags-->
     <meta name="title" content="Parcivad's Website">
     <meta name="description"
-          content="Start Seite von parcivads Website ;D">
+          content="Parcivad iCal. Stundenplan, Vertretungsplan und Klausurplan in einem Kalender.">
 
     <!--Bootstrap CSS-->
     <script src="/vendor/jquery-3.6.0.min.js"></script>
