--- a/student/register/index.html
+++ b/student/register/index.html
@@ -69,7 +69,7 @@
                         <div class="w-100"></div>
                         <span style="font-weight: bold">1.2 STABLE</span> Kalender Service läuft | Login Service läuft
                         <div class="dropdown-divider"></div>
-                        <span style="font-weight: bold">1.1 BETA</span> Klassenarbeiten werden als ganztägige Termine eingetragen.
+                        <span style="font-weight: bold">INFO</span> Klassenarbeiten werden bald als ganztägige Termine eingefügt!
                         <div class="dropdown-divider"></div>
                         <span style="font-weight: bold">1.0 BETA</span> Vertretungsplan ersetzt automatisch Kurstermine
                         <div class="dropdown-divider"></div>
