--- a/student/register/index.html
+++ b/student/register/index.html
@@ -67,9 +67,11 @@
                 <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                     <div class="alert alert-success" role="alert" style="border-radius: 0; border: 0; margin-bottom: 0">
                         <div class="w-100"></div>
-                        <span style="font-weight: bold">1.2 STABLE</span> Kalender Service läuft | Login Service läuft
+                        <span style="font-weight: bold">1.2 STABLE</span> Klausuren werden jetzt automatisch eingetragen
                         <div class="dropdown-divider"></div>
-                        <span style="font-weight: bold">INFO</span> Klassenarbeiten werden bald als ganztägige Termine eingefügt!
+                        <span style="font-weight: bold">1.1 STABLE</span> Kalender und Login Service zuverlässig nutzbar
+                        <div class="dropdown-divider"></div>
+                        <span style="font-weight: bold">INFO</span> Klausuren werden bald als ganztägige Termine eingefügt!
                         <div class="dropdown-divider"></div>
                         <span style="font-weight: bold">1.0 BETA</span> Vertretungsplan ersetzt automatisch Kurstermine
                         <div class="dropdown-divider"></div>
