--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Social Media Headline -->
     <meta property="og:title" content="Parcivads Tool and Function Website"/>
-    <meta property="og:image" content="http://localhost/img/header/parcivad.png"/>
+    <meta property="og:image" content="http://parcivad.de/img/header/parcivad.png"/>
     <!-- Standard Meta -->
     <meta name="theme-color" content="#19191F">
     <title>Parcivad | Home</title>
